<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:id="@+id/signUpFragmentContainer"
    android:layout_marginTop="?android:attr/actionBarSize"
    android:clickable="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:id="@+id/signUpFragmentLayout"
        android:clickable="true">

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/SignUpContainer"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="32dp"
            android:background="@color/colorWhite">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp"
                android:layout_centerHorizontal="true"
                android:id="@+id/TextViewName"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:text="@string/NameText"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="textEmailAddress|textEmailSubject|textWebEmailAddress"
                android:hint="@string/NameEditText"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:textCursorDrawable="@null"
                android:layout_below="@id/TextViewName"
                android:id="@+id/EditTextName"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:background="@drawable/edit_text_background"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp"
                android:layout_centerHorizontal="true"
                android:id="@+id/TextViewLastName"
                android:layout_below="@id/EditTextName"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:text="@string/LastNameText"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="textEmailAddress|textEmailSubject|textWebEmailAddress"
                android:hint="@string/LastNameEditText"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:textCursorDrawable="@null"
                android:layout_below="@id/TextViewLastName"
                android:id="@+id/EditTextLastName"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:background="@drawable/edit_text_background"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp"
                android:layout_centerHorizontal="true"
                android:id="@+id/TextViewEmail"
                android:layout_below="@id/EditTextLastName"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:text="@string/EmailText"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="textEmailAddress|textEmailSubject|textWebEmailAddress"
                android:hint="@string/EmailEditText"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:textCursorDrawable="@null"
                android:layout_below="@id/TextViewEmail"
                android:id="@+id/EditTextEmail"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:background="@drawable/edit_text_background"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_below="@id/EditTextEmail"
                android:layout_centerHorizontal="true"
                android:id="@+id/TextViewEmailIncorrect"
                android:textColor="@color/regActivityNegativeColor"
                android:textSize="12sp"
                android:text="@string/WrongEmailText"
                android:visibility="invisible"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp"
                android:layout_centerHorizontal="true"
                android:id="@+id/TextViewPassword"
                android:layout_below="@id/TextViewEmailIncorrect"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:text="@string/PasswordText"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="textPassword"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:textCursorDrawable="@null"
                android:layout_below="@id/TextViewPassword"
                android:id="@+id/EditTextPassword"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:maxLength="16"
                android:background="@drawable/edit_text_background"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_below="@id/EditTextPassword"
                android:layout_centerHorizontal="true"
                android:id="@+id/TextViewPasswordIncorrect"
                android:textColor="@color/regActivityNegativeColor"
                android:textSize="12sp"
                android:text="@string/WrongPasswordText"
                android:visibility="invisible"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background_disabled"
                android:text="@string/signUp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:textColor="@color/colorWhite"
                android:textSize="24sp"
                android:id="@+id/SignUpPageButton"
                android:layout_marginTop="32dp"
                android:layout_below="@id/TextViewPasswordIncorrect"
                android:layout_centerHorizontal="true"
                android:textAllCaps="false"
                android:layout_marginBottom="32dp"
                android:enabled="false"/>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>