<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/DetailsContainer"
    android:layout_marginEnd="32dp"
    android:layout_marginStart="32dp"
    android:layout_marginTop="?android:attr/actionBarSize"
    android:layout_marginBottom="32dp"
    android:clickable="true"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="32dp"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:id="@+id/DOBContainer">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/DOBText"
            android:layout_marginEnd="4dp"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:text="@string/DateOfBirthText" />

        <EditText
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_marginStart="16dp"
            android:textColor="@color/colorPrimary"
            android:id="@+id/DOBEditText"
            android:gravity="center"
            android:text="@string/DateOfBirthEditText"
            android:clickable="true"
            android:focusable="false"
            android:inputType="date"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/TextViewLocation"
        android:layout_below="@id/DOBContainer"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:text="@string/LocationText"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="32dp"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:layout_below="@id/TextViewLocation"
        android:id="@+id/LocationContainer">

        <EditText
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="48dp"
            android:inputType="textPassword"
            android:layout_marginEnd="16dp"
            android:textCursorDrawable="@null"
            android:id="@+id/EditTextLocation"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:maxLength="16"
            android:background="@drawable/edit_text_background"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:src="@drawable/ic_my_location"
            android:id="@+id/locationImage"
            android:layout_height="48dp" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background_disabled"
        android:text="@string/Continue"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:id="@+id/ContinueButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:layout_marginBottom="32dp"
        android:enabled="false"/>

</RelativeLayout>